<resources>
    <string name="app_name">Track the Rats App</string>
    <string name="login_button_label">LOGIN</string>
    <string name="register_button_label">REGISTER</string>
    <string name="welcome_button_label">WELCOME TO OUR APP</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_borough">BoroughActivity</string>
    <string name="title_activity_location_type">LocationTypeActivity</string>
    <string name="view_map">View Map</string>
    <string name="view_graph">View Graph</string>
    <string name="search_borough">Search Borough</string>
    <string name="date_range">Date Range</string>
    <string name="end_date">End Date</string>
    <string name="starting_date_range">01/01/2001</string>
    <string name="start_date">Start Date</string>
    <string name="search_location_type">Search Location Type</string>
    <string name="location_type">Location Type</string>
    <string name="borough">Borough</string>
    <string name="enter_long">Enter Longitude</string>
    <string name="enter_lat">Enter Latitude</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="date_format">Enter date in format MM/DD/YYYY</string>
    <string name="add_sighting">Enter Rat Sighting</string>
    <string name="cancel">Cancel</string>
    <string name="view_all">View All</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="report_new_rat">Report New Rat</string>
    <string name="search_sightings">Search Sightings</string>
    <string name="admin">Admin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter an email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="borough_spinner">Select Borough</string>
    <string name="location_type_textview">Select Location Type</string>
</resources>
