<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kanye2020.gatech.edu.rattrackapp.LocationTypeActivity">

    <TextView
        android:id="@+id/locationType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_type_textview"
        tools:layout_editor_absoluteY="6dp"
        app:layout_constraintBottom_toTopOf="@+id/locationTypeSpinner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
    </TextView>

    <Spinner
        android:id="@+id/locationTypeSpinner"
        android:layout_width="367dp"
        android:layout_height="43dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
    </Spinner>

    <Button
        android:id="@+id/viewMapButton"
        android:layout_width="147dp"
        android:layout_height="148dp"
        android:text="@string/view_map"
        android:background="@drawable/map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintTop_toBottomOf="@+id/locationTypeButton"
        android:layout_marginTop="214dp" />

    <Button
        android:id="@+id/viewGraphButton"
        android:layout_width="147dp"
        android:layout_height="148dp"
        android:text="@string/view_graph"
        android:background="@drawable/graph"
        app:layout_constraintTop_toBottomOf="@+id/locationTypeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        android:layout_marginTop="214dp" />

    <Button
        android:id="@+id/locationTypeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/search_location_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTypeSpinner"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
