<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/usernameID"
        android:layout_width="188dp"
        android:layout_height="0dp"
        android:text="@string/username"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="384dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="0dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/userNameText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="42dp"
        tools:layout_conversion_absoluteWidth="384dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.565"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText2" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="204dp"
        android:layout_height="23dp"
        android:text="@string/password"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="59dp"
        tools:layout_conversion_absoluteWidth="384dp"
        tools:layout_conversion_absoluteHeight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText2" />

    <EditText
        android:id="@+id/passwordEditText2"
        android:layout_width="336dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        tools:layout_conversion_absoluteHeight="42dp"
        tools:layout_conversion_absoluteWidth="384dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="75dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton2" />

    <Button
        android:id="@+id/loginButton2"
        android:layout_width="338dp"
        android:layout_height="43dp"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:text="@string/login_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/passwordEditText2"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="384dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="118dp" />
</android.support.constraint.ConstraintLayout>